[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/game/world/entity/MovingEntity.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/world/entity/entities/enemy/brute/SeismicBlast.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/char/brute/seismic_blast.png" type="Texture" id=3]
[ext_resource path="res://scenes/game/world/entity/components/hit_box/HitBox.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 8 )

[node name="SeismicBlast" instance=ExtResource( 1 )]
script = ExtResource( 2 )
is_gravity_enabled = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="1"]
frames = SubResource( 5 )
frame = 2
playing = true

[node name="SpawnTimer" type="Timer" parent="." index="2"]
wait_time = 0.2
one_shot = true
autostart = true

[node name="LifeTimer" type="Timer" parent="." index="3"]
wait_time = 0.4
one_shot = true
autostart = true

[node name="HitBox" parent="." index="4" instance=ExtResource( 4 )]
__team = "enemy_team"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 6 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
